# baconstack

./: .aider.conf.yml  .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  README.md  cli.py  justfile  pyproject.toml
.github/workflows/: test.yml
baconstack/: cli.py
scripts/: run_periodic_tests.py
tests/: test_cli.py  test_setup.py  test_smoke.py
