[project]
name = "baconstack"
version = "0.1.0"
description = "CLI tool for creating and managing Python web applications with Dokku deployment"
requires-python = ">=3.11"
authors = [
    { name = "Seb Bacon", email = "seb@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "copier>=8.3.0",
    "python-dotenv>=1.0.0",
    "paramiko>=3.4.0",
    "python-digitalocean>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
baconstack = "baconstack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
lint.extend-select = [
    "A",    # flake8-builtins
    "I",    # isort
    "INP",  # flake8-no-pep420
    "ISC",  # flake8-implicit-str-concat
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
]

[tool.uv]
dev-dependencies = [
    "aider-chat>=0.60.1",
    "pytest>=8.3.3",
]
